--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 .search {
-  height: 40vh;
+  height: 50vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -141,6 +141,11 @@ i {
   background: #8a6cff;
 }
 
+.gallery .load-more.disabled {
+  opacity: 0.6;
+  pointer-events: none;
+}
+
 .lightbox {
   position: fixed;
   z-index: 5;
@@ -148,6 +153,10 @@ i {
   height: 100%;
   display: none;
   background: rgba(0, 0, 0, 0.65);
+}
+
+.lightbox.show {
+  display: block;
 }
 
 .lightbox .wrapper {
